<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_writesn"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- SN -->
    <TextView
        android:id="@+id/tv_device_sn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_device_sn_from_barcode"
        android:layout_marginEnd="10dp"
        android:layout_alignStart="@+id/tv_confirm"
        android:layout_toLeftOf="@+id/et_device_sn_from_barcode"
        android:text="@string/sn_title" />

    <EditText
        android:id="@+id/et_device_sn_from_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space_center"
        android:layout_alignStart="@+id/et_confirm_barcode"
        android:layout_alignEnd="@+id/et_confirm_barcode"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:maxLength="32"
        android:hint="@string/sn_hint" />

    <Space
        android:id="@+id/space_center"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_centerInParent="true" />

    <!-- Confirm-->
    <EditText
        android:id="@+id/et_confirm_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_center"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:singleLine="true"
        android:hint="@string/confirm_hint" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/et_confirm_barcode"
        android:layout_toLeftOf="@id/et_confirm_barcode"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:text="@string/confirm_title" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirm_barcode"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/_change"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>
