<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_900"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top">

        <Button
            android:id="@+id/btn_select_ota_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btn_open_ota_file" />

        <Button
            android:id="@+id/btn_start_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btn_start_ota" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp">

        <TableRow>

            <TextView
                android:id="@+id/tv_device_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ota_device_name_title"
                android:textColor="@color/material_grey_100" />

            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/material_grey_100" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ota_file_name_title"
                android:textColor="@color/material_grey_100" />

            <TextView
                android:id="@+id/tv_ota_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ota_file_version"
                android:textColor="@color/material_grey_100" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ota_status_title"
                android:textColor="@color/material_grey_100" />

            <TextView
                android:id="@+id/tv_ota_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/material_grey_100" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ota_progress_title"
                android:textColor="@color/material_grey_100" />

            <TextView
                android:id="@+id/tv_ota_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/material_grey_100" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/pb_ota"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:indeterminate="false"
        android:max="100" />
</LinearLayout>