<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#424242">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:translationZ="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/advanced_settings"
            android:textColor="@color/material_grey_200"
            android:textSize="30dp" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_receive_cmd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receive_cmd_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/edit_background"
            android:editable="false"
            android:maxLines="8"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send_cmd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/send_cmd_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_send_cmd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/edit_background"
                android:focusedByDefault="true"
                android:maxLines="2"
                android:textColorHint="#9E9E9E"
                android:hint="@string/send_hint"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_send_cmd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/send_cmd"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
