<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/tv_gpio_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/gpio_title"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_high"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/gpio_status_high"
            android:textSize="16sp"
            android:checked="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:buttonTint="#ffffff"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/rbtn_low"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/gpio_status_low"
            android:textSize="16sp"
            android:checked="false"
            android:ellipsize="end"
            android:singleLine="true"
            android:buttonTint="#ffffff"
            android:textColor="#ffffff"/>

    </RadioGroup>

</LinearLayout>